--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "portfolio",
+  "name": "City Explorer",
   "version": "1.0.0",
-  "description": "## Feature #1: Refactor the CSS",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,15 +9,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/TrevorThomp/portfolio.git"
+    "url": "git+https://github.com/Pseudotsuga/lab-07-back-end"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/TrevorThomp/portfolio/issues"
+    "url": "https://github.com/Pseudotsuga/lab-07-back-end/issues"
   },
-  "homepage": "https://github.com/TrevorThomp/portfolio#readme",
+  "homepage": "https://github.com/Pseudotsuga/lab-07-back-end#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1"
